fix(searchbox): Add missing color to searchbox input field (#3086)
fix #3075

--- a/src/css/theme/_variables.scss
+++ b/src/css/theme/_variables.scss
@@ -8,6 +8,7 @@ $font-size: 12px;
 // | COLORS |
 // +--------+
 $white: #FFFFFF;
+$black: #000000;
 $light-blue: #3E82F7;
 $blue: #3369E7;
 $dark-blue: #184ECD;
